Segundo commit. después de refactorizar

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -43,7 +43,7 @@ javadoc.author=false
 test.src.dir=test
 build.dir=build
 build.test.classes.dir=${build.dir}/test/classes
-platform.active=default_platform
+platform.active=Java_15n
 javac.compilerargs=
 main.class=daw_ed04_actividad.Main
 dist.jar=${dist.dir}/ED_Tarea4_Parte1.jar
